--- a/index.html
+++ b/index.html
@@ -4,21 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Accordian</title>
 </head>
 <body>
-    <div class="accordian-container">
-    <div class="title">
-        <h3>Frequently Asked Question</h3>
-    </div>
-    <div class="content">
+    <div class="accordian">
+        <h3 class="accordian-title">Frequently Asked Question</h3>
+
+     <div class="content-container">
         <div class="question">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus qui, voluptas possimus distinctio non id. Perferendis dolor eius accusantium maxime, obcaecati iure sit id cum itaque, corporis officia quae. Reiciendis.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit ?
+        </div>
+        <div class="answer">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum libero, tenetur, eum ipsam labore veritatis autem ipsum ex voluptas dicta mollitia nam. Quidem fugiat quia debitis error repellendus! Aut, voluptates.
+        </div>
+     <div class="content-container">
+        <div class="question">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit ?
+        </div>
+        <div class="answer">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum libero, tenetur, eum ipsam labore veritatis autem ipsum ex voluptas dicta mollitia nam. Quidem fugiat quia debitis error repellendus! Aut, voluptates.
+        </div>
+     <div class="content-container">
+        <div class="question">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit ?
         </div>
         <div class="answer">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum libero, tenetur, eum ipsam labore veritatis autem ipsum ex voluptas dicta mollitia nam. Quidem fugiat quia debitis error repellendus! Aut, voluptates.
         </div>
     </div>
-</div>
+
+
 </body>
 </html>
