updated index file

--- a/index.html
+++ b/index.html
@@ -9,31 +9,21 @@
 </head>
 <body>
     <div class="accordian">
-        <h3 class="accordian-title">Frequently Asked Question</h3>
+        <h2 class="accordian-title">Frequently Asked Question</h2>
 
      <div class="content-container">
-        <div class="question">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit ?
-        </div>
-        <div class="answer">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum libero, tenetur, eum ipsam labore veritatis autem ipsum ex voluptas dicta mollitia nam. Quidem fugiat quia debitis error repellendus! Aut, voluptates.
+            <div class="question">Lorem ipsum dolor, sit amet consectetur adipisicing elit ?</div>
+            <div class="answer"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum libero, tenetur, eum ipsam labore veritatis autem ipsum ex voluptas dicta mollitia nam. Quidem fugiat quia debitis error repellendus! Aut, voluptates.</div>
+     </div>
+     <div class="content-container">
+            <div class="question">Lorem ipsum dolor, sit amet consectetur adipisicing elit ?</div>
+            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum libero, tenetur, eum ipsam labore veritatis autem ipsum ex voluptas dicta mollitia nam. Quidem fugiat quia debitis error repellendus! Aut, voluptates.</div>
         </div>
      <div class="content-container">
-        <div class="question">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit ?
-        </div>
-        <div class="answer">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum libero, tenetur, eum ipsam labore veritatis autem ipsum ex voluptas dicta mollitia nam. Quidem fugiat quia debitis error repellendus! Aut, voluptates.
-        </div>
-     <div class="content-container">
-        <div class="question">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit ?
-        </div>
-        <div class="answer">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum libero, tenetur, eum ipsam labore veritatis autem ipsum ex voluptas dicta mollitia nam. Quidem fugiat quia debitis error repellendus! Aut, voluptates.
+            <div class="question">Lorem ipsum dolor, sit amet consectetur adipisicing elit ? </div>
+            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum libero, tenetur, eum ipsam labore veritatis autem ipsum ex voluptas dicta mollitia nam. Quidem fugiat quia debitis error repellendus! Aut, voluptates.</div>
         </div>
     </div>
-
-    <script src="./script.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
